# vmm-reference

./: Cargo.toml  coverage_config_x86_64.json
.buildkite/: deps-pipeline.yml
.buildkite/hooks/: post-checkout
docs/: getting-started.md
resources/: reinvent_demo.txt
resources/disk/: reinvent_demo_disk_setup.txt
resources/kernel/: make_busybox.sh  make_kernel.sh  make_kernel_image.sh
resources/kernel/www/: hello.txt  index.html
resources/kernel/www/cgi-bin/: upload.cgi
src/: main.rs
src/api/src/: lib.rs
src/devices/: Cargo.toml
src/devices/src/: lib.rs
src/devices/src/legacy/: mod.rs  serial.rs
src/devices/src/virtio/block/: device.rs  mod.rs  request.rs
src/devices/src/virtio/net/: tap.rs
src/vm-vcpu/: Cargo.toml
src/vm-vcpu/src/: vm.rs
src/vm-vcpu/src/vcpu/: mod.rs
src/vmm/: Cargo.toml
src/vmm/src/: config.rs  devices.rs  lib.rs  serial.rs  vm.rs
src/vmm/src/device/: mod.rs  serial.rs
src/vmm/src/vcpu/: cpuid.rs  mod.rs
src/vmm/tests/: integration_tests.rs
tests/: test_run_reference_vmm.py
tests/tools/s3/: resource_manifest.json
