[package]
name = "vm-vcpu"
version = "0.1.0"
authors = ["Andreea Florescu <fandree@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.76"
kvm-bindings = { version = "0.3.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.5.0"
vm-device = { git = "https://github.com/aghecenco/vm-device.git", branch = "send" }
vm-memory = { version = "0.3.0", features = ["backend-mmap"] }
vmm-sys-util = "0.6.1"
